Convert into pages router

--- a/src/assets/scss/globals.scss
+++ b/src/assets/scss/globals.scss
@@ -126,8 +126,7 @@ body {
       margin-top: 20px;
       gap: 20px;
 
-      
-      button {
+      #view-more-btn {
         padding: 5px 8px;
         border-radius: 8px;
       }
@@ -155,4 +154,8 @@ body {
 // Single-Question
 .single-question {
   margin: 20px 0;
+}
+
+.tooltip:hover .tooltip-item {
+  visibility: visible;
 }
